--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:id="@+id/bt_draglayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="拖拽控件" />
+            android:text="仿酷狗音乐侧滑" />
     </LinearLayout>
 
 
