--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,126 +46,25 @@
             android:id="@+id/bt_draglayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="仿酷狗音乐侧滑" />
+            android:text="仿酷狗音乐侧边栏" />
+
+        <Button
+            android:id="@+id/bt_flowlayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Flowyout" />
+
+        <Button
+            android:id="@+id/bt_motion_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MotionLayout" />
+
+        <Button
+            android:id="@+id/bt_verification_code_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="验证码输入框" />
+
     </LinearLayout>
-
-
-    <!--    <com.example.flowlayout.FlowLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:padding="10dp">-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="第一行代码"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="Java核心技术"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="C++从入门到入土"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="Python实践"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="深入理解计算机系统"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="操作系统导论"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="数据分析"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="深入理解LINUX内核"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="数学之美"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="C Primer Plus 第六版"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="JavaScript 高级程序设计"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="MySQL必知必会"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="Android进阶之光"-->
-    <!--            android:textColor="@color/black" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_margin="5dp"-->
-    <!--            android:background="@drawable/txt_selector"-->
-    <!--            android:text="Android进阶解密"-->
-    <!--            android:textColor="@color/black" />-->
-    <!--    </com.example.flowlayout.FlowLayout>-->
-
 </ScrollView>
