修复验证码框无法显示文字和游标的Bug

--- a/VerificationCodeView/src/main/res/layout/activity_verification_code_view.xml
+++ b/VerificationCodeView/src/main/res/layout/activity_verification_code_view.xml
@@ -15,7 +15,8 @@
         android:gravity="center"
         app:editTextBackground="@drawable/edt_background"
         app:editTextCursor="@drawable/edt_cursor"
-        app:inputNumber="5"
+        app:inputNumber="6"
+        app:spacing="10dp"
         app:inputTextSize="8sp"
         app:isCursorVisible="true" />
 
