--- a/VerificationCodeView/src/main/res/drawable/edt_background.xml
+++ b/VerificationCodeView/src/main/res/drawable/edt_background.xml
@@ -3,17 +3,17 @@
 
     <item android:state_window_focused="false">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
-            <stroke android:width="1dp" android:color="#C4C4C4" />
-            <corners android:radius="5dp" />
+            <solid android:color="#B0F3F3F3" />
+            <stroke android:width="1dp" android:color="#FFFFFF" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
 
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
-            <stroke android:width="1dp" android:color="#0dbc75" />
-            <corners android:radius="5dp" />
+            <solid android:color="#B0F3F3F3" />
+            <stroke android:width="1dp" android:color="#FFA000" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
 </selector>
